force-app/main/default/objects/DevAssist_Metadata_History__mdt/DevAssist_Metadata_History__mdt.object-meta.xml
<CustomObject>
    <description>Appends a new record every time a change occurs to that file, including summary, timestamp, and commit info. Think of it like a lightweight Field History Tracking object for metadata.</description>
    <label>DevAssist Metadata History</label>
    <pluralLabel>DevAssist Metadata Histories</pluralLabel>
</CustomObject>