force-app/main/default/objects/DevAssist_Metadata_History__mdt/fields/Deployed_At__c.field-meta.xml
<CustomField>
    <fullName>Deployed_At__c</fullName>
    <description>Timestamp of the change.</description>
    <label>Deployed At</label>
    <type>DateTime</type>
</CustomField>