force-app/main/default/objects/DevAssist_Metadata_History__mdt/fields/Deployed_By__c.field-meta.xml
<CustomField>
    <fullName>Deployed_By__c</fullName>
    <description>Username of the deployer or committer.</description>
    <label>Deployed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>