force-app/main/default/objects/DevAssist_Metadata_History__mdt/fields/DevAssist_Metadata__c.field-meta.xml
<CustomField>
    <fullName>DevAssist_Metadata__c</fullName>
    <label>DevAssist Metadata</label>
    <referenceTo>DevAssist_Metadata__mdt</referenceTo>
    <relationshipLabel>DevAssist Metadata Histories</relationshipLabel>
    <relationshipName>DevAssist_Metadata_Histories</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>