force-app/main/default/objects/DevAssist_Metadata_History__mdt/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>Unique key per version record. Could include file name + timestamp or commit hash.</description>
    <label>DeveloperName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>