force-app/main/default/objects/DevAssist_Metadata_History__mdt/fields/GitHub_Commit_Sha__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Commit_Sha__c</fullName>
    <label>GitHub Commit Sha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>