force-app/main/default/objects/DevAssist_Metadata_History__mdt/fields/GitHub_File_Path__c.field-meta.xml
<CustomField>
    <fullName>GitHub_File_Path__c</fullName>
    <description>File path of the changed metadata. Helpful for lookup and traceability even without main record.</description>
    <label>GitHub File Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>