force-app/main/default/objects/DevAssist_Metadata_History__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Object the metadata is related to (e.g. Contact), if relevant.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>