force-app/main/default/objects/DevAssist_Metadata_History__mdt/fields/Slack_Workflow_Link__c.field-meta.xml
<CustomField>
    <fullName>Slack_Workflow_Link__c</fullName>
    <description>Link to any relevant Slack workflow message or approval.</description>
    <label>Slack Workflow Link</label>
    <type>Url</type>
</CustomField>