force-app/main/default/objects/DevAssist_Metadata_History__mdt/fields/Visible_for_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Visible_for_Record_Type__c</fullName>
    <label>Visible for Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>