force-app/main/default/objects/DevAssist_Metadata_History__mdt/fields/Visible_in_App__c.field-meta.xml
<CustomField>
    <fullName>Visible_in_App__c</fullName>
    <description>App the metadata change is associated with.</description>
    <label>Visible in App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>