force-app/main/default/objects/DevAssist_Metadata_History__mdt/fields/Visible_to_Profile__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Profile__c</fullName>
    <description>Profile that would see this variation of the metadata.</description>
    <label>Visible to Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>